Fix margin instead of gap

--- a/public/css/tailwind/tailwind.css
+++ b/public/css/tailwind/tailwind.css
@@ -1072,6 +1072,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
